# synapse

./: .env.example  .env.test.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  mcp_test_report.json  pyproject-api.toml  pyproject.toml  qa_results.txt  test_all_mcp_tools.py  test_mcp_tools.py
.claude/: settings.local.json
.github/prompts/: plan-comprehensiveFixPlan.prompt.md  plan-qaTestPlan.prompt.md
.qa/checklists/: p0_implementation.md  pre_commit.md
.qa/reports/: gap1_completion_audit_2026-03-17.md  gap2_completion_audit_2026-03-17.md  layer3_fix_verification_audit.md  layer3_graph_population_audit.md  layer3_integration_test_final_report.md  layer3_test_execution_report.md  production_release_report.md  qa_report.md  qa_report_2026-03-17.md  qa_report_2026-03-17_session.md  qa_report_2026-03-20_uncommitted.md  thai_encoding_analysis_2026-03-20.md
api/: .env.example  Dockerfile  __init__.py  config.py  deps.py  main.py  middleware.py  normalization.py  responses.py  text_guard.py
api/middleware/: __init__.py  auth.py  error_handler.py
api/routes/: __init__.py  episodes.py  feed.py  graph.py  identity.py  memory.py  oracle.py  procedures.py  system.py
api/services/: __init__.py  event_bus.py
api/tests/: __init__.py  conftest.py  test_all_endpoints.py  test_memory.py  test_memory_real.py  test_system.py
config/: hybrid_weights.yaml
docker/: patch_graphiti_core.sh
docs/: API_REFERENCE.md  CLAUDE_CODE_USAGE.md  DECISION_LOG.md  FERRYMAN_INTEGRATION.md  IMPLEMENTATION_PLAN.md  M2_INTEGRATION_REPORT.md  MCP_TOOLS_TEST_REPORT.md  PROJECT_PLAN.md  QUICK_REFERENCE.md  WORKFLOW.md  fix-plan.md  gap_analysis_report.md  integration_test_report.md
docs/checklists/: production_release_checklist_2026-03-20.md
docs/phases/: phase-1-p0-critical.md  phase-2-p1-high.md  phase-3-p2-medium.md
docs/plans/: ROADMAP.md  backend_api_plan.md  frontend_plan.md  gap2_identity_model_plan.md  personal_brain_architecture_and_maturity_2026-03-21.md  phase-1-foundation.md  phase-2-graph.md  phase-3-crud.md  phase-4-polish.md  quality-gates-overview.md  synapse_capabilities_flow_and_differentiators_bilingual_2026-03-21.md
docs/reports/: bug_analysis_report.md  full_function_audit_2026-03-20.md  hybrid_search_actual_verification_2026-03-21.md  hybrid_search_healthy_mode_verification_2026-03-21.md  live_integration_test_report.md  mcp_tools_coverage_report.md  mcp_tools_test_report.md  phase1_certification_report.md  phase2_certification_report.md  phase3_certification_report.md  phase_1_report.md  phase_2_report.md  phase_3_report.md  phase_4_report.md  production_readiness_review_2026-03-20.md  rate_limit_429_analysis.md
docs/reviews/: phase_1_review.md  phase_2_review.md  phase_3_review.md  phase_4_review.md
scripts/: _utf8_stdio.py  deploy.sh  pre_deploy_smoke.py  verify_hybrid_search_actual.py  verify_hybrid_search_healthy_mode.py
synapse/: __init__.py  events.py  graph_runtime.py
synapse-ui/: .dockerignore  Dockerfile  next.config.ts  package.json  tsconfig.tsbuildinfo
synapse-ui/.qa/: phase1_qa_report.md
synapse-ui/app/: globals.css  layout.tsx
synapse/classifiers/: __init__.py  layer_classifier.py
synapse/graphiti/: __init__.py  edges.py  errors.py  (+1 more)
tests/: test_identity_model.py  test_layer3_graph_population.py  test_mcp_graph_thai_regressions.py  test_mcp_layer_tools.py  test_oracle_tools.py  test_phase1.py  test_phase2.py  test_qa_comprehensive.py  test_quick_wins.py  test_semantic_outbox_recovery.py
(+73 files in other folders)
