[project]
name = "synapse"
version = "0.1.0"
description = "Unified AI Memory System - Knowledge Graph + Five-Layer Memory + Thai NLP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Boat", email = "boat@example.com"},
]
keywords = ["ai", "memory", "knowledge-graph", "mcp", "thai-nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Graphiti core
    "graphiti-core>=0.28.2",
    "falkordb>=1.0.0",

    # MCP
    "mcp>=1.9.4",
    "httpx>=0.25.0",
    "httpx-sse>=0.4.0",

    # LLM
    "openai>=1.0.0",
    "anthropic>=0.40.0",

    # Embeddings
    "sentence-transformers>=3.0.0",

    # Database
    "aiosqlite>=0.19.0",
    "qdrant-client>=1.10.1",

    # Thai NLP
    "pythainlp>=5.0.0",

    # Utils
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "starlette>=0.36.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
synapse = "synapse.cli:main"
synapse-mcp = "synapse.mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synapse"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
